--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <nav class="same-line">
         <div class="topnav left">
-            <a href="#home">YOUR NAME</a>
+            <a href="#home">Kanishk Chinna</a>
         </div>
         <div class="topnav right">
             <a href="#home">Home</a>
@@ -26,11 +26,11 @@
     <section id="home">
 
         <div class="same-line-panel">
-            <img id="image" src=profile.png>
+            <img id="image" src=profile.JPEG>
             <div class="center">
-                <h1>YOUR NAME</h1>
+                <h1>Kanishk Chinna</h1>
                 <h2>Undergraduate Student</h2>
-                <h3>Majors, Minors</h3>
+                <h3>B.S. Computer Science</h3>
             </div>
 
         </div>
@@ -42,7 +42,13 @@
         <div class="same-line-panel reveal">
             <img id="logo" src=logo.png>
             <div class="panel">
-                <p>Put your Bio Here</p>
+                <p>
+                    Hi, I'm Kanishk, a Computer Science student at the University of Maryland - College Park.
+                    <br>
+                    For as long as I can remember, I've had a powerful interest for everything in the tech space, constantly keeping up with the latest releases in smartphones, computer parts, and more.
+                    <br>
+                    My senior year of high school, I developed an interest in programming and have continued to expand that passion, working on several projects as I learn new technologies
+                </p>
             </div>
 
         </div>
@@ -52,16 +58,22 @@
             <h1 class="section-header">Projects</h1>
             <div class="row">
                 <div class="column reveal" style="background-color:#A4969B;">
-                    <h2>Project 1 Title</h2>
-                    <p>Description of Project 1...</p>
+                    <h2>AWS DynamoDB REST APIs</h2>
+                    <p>
+                        A set of REST APIs that handle CRUD functionality for AWS DynamoDB and handle complex queries of data from the database based on upload time, team name, and other data points.
+                    </p>
                 </div>
                 <div class="column reveal" style="background-color:#BFB5B9;">
-                    <h2>Project 2 Title</h2>
-                    <p>Description of Project 2...</p>
+                    <h2>MM16 Mobile App</h2>
+                    <p>
+                        A mobile application developed using React Native that allows participants of UMD's annual Raas dance competition to stay updated on the event. Uses APIs from another project to work with participant data.
+                    </p>
                 </div>
                 <div class="column reveal" style="background-color:#D1CACD;">
-                    <h2>Project 3 Title</h2>
-                    <p>Description of Project 3...</p>
+                    <h2>.csv to DynamoDB</h2>
+                    <p>
+                        Implements AWS S3, AWS Lambda, and AWS DynamoDB to transfer rows of data from the .csv file that is uploaded to the S3 bucket into DynamoDB. The Lambda function triggers upon upload of a new .csv file and only adds new data so as to avoid duplicates.
+                    </p>
                 </div>
             </div>
         </div>
@@ -69,15 +81,13 @@
 </body>
 <footer>
     <div class="leftFooter">
-        YOUREMAIL@EMAIL.COM
+        kchinnap@umd.edu
     </div>
     <div class="rightFooter">
-        <a href="https://www.google.com/" class="fa fa-github" style="font-size:36px"></a>
-
+        <a href="https://github.com/kchinna" class="fa fa-github" style="font-size:36px"></a>
     </div>
     <div class="rightFooterr">
-        <a href="https://www.google.com/" class="fa fa-linkedin" style="font-size:36px"></a>
-
+        <a href="https://www.linkedin.com/in/kanishk-chinna-04a6b41b0/" class="fa fa-linkedin" style="font-size:36px"></a>
     </div>
 </footer>
 
