--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="topnav right">
             <a href="#home">Home</a>
             <a href="#about">About</a>
-            <a href="#project">Projects</a>
+            <a href="#project">Projects</s></a>
             <!-- <a href="#about">About</a> -->
         </div>
     </nav>
@@ -43,7 +43,7 @@
             <img id="logo" src=logo.png>
             <div class="panel">
                 <p>
-                    Hi, I'm Kanishk, a Computer Science student at the University of Maryland - College Park.
+                    Hey, I'm Kanishk, a Computer Science student at the University of Maryland - College Park.
                     <br>
                     For as long as I can remember, I've had a powerful interest for everything in the tech space, constantly keeping up with the latest releases in smartphones, computer parts, and more.
                     <br>
